$Id$

1999.5.31
  * Argv.get_{string,pointer,object} may raise Null_pointer (Jacques)
  * Support for creating new widgets (Hubert)

1999.5.28
  * a few stylistic corrections
  * added Packer in gtk.ml

1999.5.27
  * new Gtk.Main.main Gtk.Main.quit and GtkThread.main (for modal windows)
  * added x: and y: to Window.setter
  * new methods: object#get_type widget#misc#lock_accelerators
    widget#misc#visible widget#misc#parent container#set_focus#vadjustment
    container#set_focus#hadjustment (could be container#set_focus#adjustment with a dir param)
    window#set_modal window#set_position window#set_default_size
    window#set_transient_for
    menu#set_accel_group
  * new classes: handle_box_skel handle_box_signals handle_box
    bbox color_selection color_selection_dialog toolbar
    and the corresponding modules in gtk.ml
    new class type: is_window and method as_window
  * new param tearoff: in new_menu_item
    new param x: and y: modal: in Window.setter
  * Widget.event and Widget.activate return bool
  * new example: examples/testgtk.ml and test.xpm
  (Hubert)

1999.5.25
  * upgraded to gtk+-1.2.3 (all examples work)
  * suppressed deprecated function calls and corrected examples
  * added a patch to use toplevel threads in olabl-2.02

1998.12.13
  * upgraded to olabl-2.01

1998.12.9
  * replicated Main, Timeout and Grab to GtkObj (no need to open Gtk anymore)
  * moved some non standard classes to GtkExt

1998.12.8
  * added the first application, xxaplay, Playstation audio track 
    player for linux. (How architecture specific!) (Furuse)

1998.12.8
  * more widgets in GtkObj
  * refined memory management
  * all variants in upper case

1998.12.7
  * after deeper thought, re-introduced the connect sub-object
  * simplified GtkObj: use simple inheritance and allow easy subtyping
  * updated olabl.diffs for bugs in class functions parsing and printing
  * add ThreadObj for concurrent object programming
  (Jacques)

1998.12.3