@@ -1,6 +1,7 @@
 $Id$
 
 1999.5.31
+  * GtkObj: list, tree and menu_shell inherit from item_container (Jacques)
   * Argv.get_{string,pointer,object} may raise Null_pointer (Jacques)
   * Support for creating new widgets (Hubert)
 
